<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <!--
    Spotify Streamer
    Super Duo (2 buttons: Football Scores App and Library App)
    Build It Bigger
    XYZ Reader
    Capstone
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_apps"
        android:padding="20dp"
        android:autoText="false"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_spotify_streamer"
        />

    <Button
        android:id="@+id/btn_super_duo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_super_duo"
        />

    <Button
        android:id="@+id/btn_build_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_build_bigger"
        />

    <Button
        android:id="@+id/btn_xyz_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_xyz_reader"
        />

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_capstone"
        />

</LinearLayout>
